--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
           <p class="text-muted">Loading recent posts...</p>
         </div>
         <div class="mt-8 text-center">
-          <a href="/blog" class="inline-flex items-center justify-center rounded-[10px] px-[22px] py-[14px] text-xl font-medium cursor-pointer select-none bg-transparent text-text border border-text no-underline hover:bg-[rgba(224,225,221,0.08)] transition-colors">View All Posts</a>
+          <a href="./blog.html" class="inline-flex items-center justify-center rounded-[10px] px-[22px] py-[14px] text-xl font-medium cursor-pointer select-none bg-transparent text-text border border-text no-underline hover:bg-[rgba(224,225,221,0.08)] transition-colors">View All Posts</a>
         </div>
       </div>
     </section>
