fix mobile header and block title rendering

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 <body>
   <header class="fixed inset-x-0 top-0 z-50 bg-[rgba(13,27,42,0.92)] backdrop-blur-md -webkit-backdrop-blur-md" aria-label="Top navigation">
     <div class="container flex justify-between items-center h-[75px]">
-      <a href="#top" class="text-[40px] font-bold text-text opacity-95 hover:opacity-100 no-underline transition-opacity leading-none flex items-center" aria-label="Home">m</a>
-      <nav class="flex gap-9 items-center max-md:gap-[18px] max-md:flex-wrap max-md:justify-end" aria-label="Primary">
-        <a class="text-xl font-medium text-text opacity-95 hover:opacity-100 no-underline max-md:text-lg" href="#about">About</a>
-        <a class="text-xl font-medium text-text opacity-95 hover:opacity-100 no-underline max-md:text-lg" href="#experience">Experience</a>
-        <a class="text-xl font-medium text-text opacity-95 hover:opacity-100 no-underline max-md:text-lg" href="#projects">Projects</a>
-        <a class="text-xl font-medium text-text opacity-95 hover:opacity-100 no-underline max-md:text-lg" href="#blog">Blog</a>
-        <a class="text-xl font-medium text-text opacity-95 hover:opacity-100 no-underline max-md:text-lg" href="#contacts">Contacts</a>
+      <a href="#top" class="text-[40px] font-bold text-text opacity-95 hover:opacity-100 no-underline transition-opacity leading-none flex items-center max-md:text-[30px]" aria-label="Home">m</a>
+      <nav class="flex gap-9 items-center max-md:gap-2 max-md:flex-nowrap max-md:justify-end" aria-label="Primary">
+        <a class="text-xl font-medium text-text opacity-95 hover:opacity-100 no-underline max-md:text-sm" href="#about">About</a>
+        <a class="text-xl font-medium text-text opacity-95 hover:opacity-100 no-underline max-md:text-sm" href="#experience">Experience</a>
+        <a class="text-xl font-medium text-text opacity-95 hover:opacity-100 no-underline max-md:text-sm" href="#projects">Projects</a>
+        <a class="text-xl font-medium text-text opacity-95 hover:opacity-100 no-underline max-md:text-sm" href="#blog">Blog</a>
+        <a class="text-xl font-medium text-text opacity-95 hover:opacity-100 no-underline max-md:text-sm" href="#contacts">Contacts</a>
       </nav>
     </div>
   </header>
