--- a/blog-posts/hibernate-postgresql-spring-boot.html
+++ b/blog-posts/hibernate-postgresql-spring-boot.html
@@ -17,13 +17,13 @@
 <body>
   <header class="fixed inset-x-0 top-0 z-50 bg-[rgba(13,27,42,0.92)] backdrop-blur-md -webkit-backdrop-blur-md" aria-label="Top navigation">
     <div class="container flex justify-between items-center h-[75px]">
-      <a href="../index.html" class="text-[30px] font-bold text-text opacity-95 hover:opacity-100 no-underline transition-opacity" aria-label="Home">m</a>
-      <nav class="flex gap-9 items-center max-md:gap-[18px] max-md:flex-wrap max-md:justify-end" aria-label="Primary">
-        <a class="text-xl font-medium text-text opacity-95 hover:opacity-100 no-underline max-md:text-lg" href="../index.html#about">About</a>
-        <a class="text-xl font-medium text-text opacity-95 hover:opacity-100 no-underline max-md:text-lg" href="../index.html#experience">Experience</a>
-        <a class="text-xl font-medium text-text opacity-95 hover:opacity-100 no-underline max-md:text-lg" href="../index.html#projects">Projects</a>
-        <a class="text-xl font-medium text-text opacity-95 hover:opacity-100 no-underline max-md:text-lg" href="../blog.html">Blog</a>
-        <a class="text-xl font-medium text-text opacity-95 hover:opacity-100 no-underline max-md:text-lg" href="../index.html#contacts">Contacts</a>
+      <a href="../index.html" class="text-[40px] font-bold text-text opacity-95 hover:opacity-100 no-underline transition-opacity leading-none flex items-center max-md:text-[30px]" aria-label="Home">m</a>
+      <nav class="flex gap-9 items-center max-md:gap-2 max-md:flex-nowrap max-md:justify-end" aria-label="Primary">
+        <a class="text-xl font-medium text-text opacity-95 hover:opacity-100 no-underline max-md:text-sm" href="../index.html#about">About</a>
+        <a class="text-xl font-medium text-text opacity-95 hover:opacity-100 no-underline max-md:text-sm" href="../index.html#experience">Experience</a>
+        <a class="text-xl font-medium text-text opacity-95 hover:opacity-100 no-underline max-md:text-sm" href="../index.html#projects">Projects</a>
+        <a class="text-xl font-medium text-text opacity-95 hover:opacity-100 no-underline max-md:text-sm" href="../blog.html">Blog</a>
+        <a class="text-xl font-medium text-text opacity-95 hover:opacity-100 no-underline max-md:text-sm" href="../index.html#contacts">Contacts</a>
       </nav>
     </div>
   </header>
